--- a/frontend/src/app/header/header/header.component.html
+++ b/frontend/src/app/header/header/header.component.html
@@ -1,46 +1,57 @@
-
-
 <nav class="navbar navbar-expand-lg navbar-light shadow-sm bg-light fixed-top">
-    <div class="container"> <a class="navbar-brand d-flex align-items-center" href="#">
-      
-        <img src="assets/picture/dolphin.svg" alt="Intro Gallery Room Sample Pictures" width="50px" height="60px">
+  <div class="container"> <a class="navbar-brand d-flex align-items-center"
+      href="#">
+
+      <img src="assets/picture/dolphin.svg"
+        alt="Intro Gallery Room Sample Pictures"
+        width="50px"
+        height="60px">
 
 
-    <span class="ml-3 font-weight-bold">&nbsp; DOLPHIN</span>
-    </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar4">
+      <span class="ml-3 font-weight-bold">&nbsp; DOLPHIN</span>
+    </a> <button class="navbar-toggler navbar-toggler-right border-0"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbar4">
     </button>
-    
-    
-    <div class=" navbar-collapse" id="navbar4">
-    <ul class="navbar-nav mr-auto pl-lg-4">
-    <li class="nav-item px-lg-2 active"> <a class="nav-link" href="#"> <span class="d-inline-block d-lg-none icon-width"></span>Home</a> </li>
-    <li class="nav-item px-lg-2"> <a class="nav-link" href="#"><span class="d-inline-block d-lg-none icon-width"></span>Help</a></li>
-    <li class="nav-item px-lg-2"> <a class="nav-link" href="#"><span class="d-inline-block d-lg-none icon-width"></span>Contact</a> </li>
-    <li class="nav-item px-lg-2"> <a class="nav-link" href="#"><span class="d-inline-block d-lg-none icon-width"></span>About Us</a> </li>
 
-  </ul>
-    <ul class="navbar-nav ml-auto mt-3 mt-lg-0">
-    <li class="nav-item"> <a class="nav-link" href="#">
-      <i class="bi bi-twitter"></i><span class="d-lg-none ml-3">&nbsp;&nbsp;&nbsp;Twitter</span>
-    </a> </li>
-    <li class="nav-item"> <a class="nav-link" href="#">
-    <i class="bi bi-facebook"></i><span class="d-lg-none ml-3">&nbsp;&nbsp;&nbsp;Facebook</span>
-    </a> </li>
-    <li class="nav-item"> <a class="nav-link" href="#">
-    <i class="bi bi-instagram"></i><span class="d-lg-none ml-3">&nbsp;&nbsp;&nbsp;Instagram</span>
-    </a> </li>
-      <li class="nav-item"> <a class="nav-link" href="#">
 
-    </a> </li>
-    </ul>
-    
+    <div class=" navbar-collapse"
+      id="navbar4">
+      <ul class="navbar-nav mr-auto pl-lg-4">
+        <li class="nav-item px-lg-2 active"> <a class="nav-link"
+            href="#"> <span class="d-inline-block d-lg-none icon-width"></span>Home</a> </li>
+        <li class="nav-item px-lg-2"> <a class="nav-link"
+            href="#"><span class="d-inline-block d-lg-none icon-width"></span>Help</a></li>
+        <li class="nav-item px-lg-2"> <a class="nav-link"
+            href="#"><span class="d-inline-block d-lg-none icon-width"></span>Contact</a> </li>
+        <li class="nav-item px-lg-2"> <a class="nav-link"
+            href="#"><span class="d-inline-block d-lg-none icon-width"></span>About Us</a> </li>
+
+      </ul>
+      <ul class="navbar-nav ml-auto mt-3 mt-lg-0">
+        <li class="nav-item"> <a class="nav-link"
+            href="#">
+            <i class="bi bi-twitter"></i><span class="d-lg-none ml-3">&nbsp;&nbsp;&nbsp;Twitter</span>
+          </a> </li>
+        <li class="nav-item"> <a class="nav-link"
+            href="#">
+            <i class="bi bi-facebook"></i><span class="d-lg-none ml-3">&nbsp;&nbsp;&nbsp;Facebook</span>
+          </a> </li>
+        <li class="nav-item"> <a class="nav-link"
+            href="#">
+            <i class="bi bi-instagram"></i><span class="d-lg-none ml-3">&nbsp;&nbsp;&nbsp;Instagram</span>
+          </a> </li>
+        <li class="nav-item"> <a class="nav-link"
+            href="#">
+
+          </a> </li>
+      </ul>
+
     </div>
     <div class="right">
       <button class="btn btn-outline-secondary">Logout</button>
-    </div>  
+    </div>
   </div>
-    
-    </nav>
-    
-    
-    
+
+</nav>
