--- a/frontend/src/app/mytest/mytest.component.html
+++ b/frontend/src/app/mytest/mytest.component.html
@@ -2,3 +2,12 @@
 <button (click)='createEntry()'>
   Create Entry
 </button>
+<button (click)='getEntry()'>
+  get Entry
+</button>
+<ul *ngIf='entries'>
+  <li *ngFor='let entry of entries'>
+    {{entry.mood}}
+    {{entry.text}}
+  </li>
+</ul>
