--- a/frontend/src/app/home/home/home.component.html
+++ b/frontend/src/app/home/home/home.component.html
@@ -1,1 +1,280 @@
-<p>home works!</p>
+
+
+
+
+
+<!-- Start Banner Hero -->
+<div id="template-mo-zay-hero-carousel" class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="1"></li>
+        <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="container">
+                <div class="row p-5">
+                    <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                        <img class="img-fluid" src="assets/picture/dolphin.svg" alt="">
+                    </div>
+                    <div class="col-lg-6 mb-0 d-flex align-items-center">
+                        <div class="text-align-left align-self-center">
+                            <h1 class="h1 text-primary"><b>Dolphin</b></h1>
+                            <h3 class="h2">An Angular Website</h3>
+                            <p>
+                              Dophins represents friendship and loyalty, both to humans and to their own species, is the dolphin.
+                               Dolphins have rescued humans from shark attacks, and if another dolphin is in mortal danger,
+                                others will appear to help it keep its blowhole above the surface of the water. Hence, we decided to name our app on
+                                the name of the animal <strong>Dolphin</strong> to offer a friendly and a relaxing envronment for users to share their feelings.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="container">
+                <div class="row p-5">
+                    <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                        <img class="img-fluid" src="assets/picture/brain.svg" alt="">
+                    </div>
+                    <div class="col-lg-6 mb-0 d-flex align-items-center">
+                        <div class="text-align-left">
+                            <h1 class="h1"></h1>
+                            <h3 class="h2">Mental Health</h3>
+                            <p>
+                                Mental health is immensely important at every stage of life, from childhood and adolescence through adulthood.
+                                Journaling helps control your symptoms and improve your mood by: Helping you prioritize problems, fears, and concerns. Tracking any symptoms day-to-day so that you can recognize triggers and learn ways to better control them.
+                                Hence, we aim to provide an opportunity for positive self-talk and identifying negative thoughts to combat mental health problems, with the help of this website.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="container">
+                <div class="row p-5">
+                    <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                        <img class="img-fluid" src="assets/picture/laptop.svg" alt="">
+                    </div>
+                    <div class="col-lg-6 mb-0 d-flex align-items-center">
+                        <div class="text-align-left">
+                            <h1 class="h1">Goals</h1>
+                            <h3 class="h2"> Importance of the website </h3>
+                            <p>
+                            This is a free to use website, which will track your daily moods, activities and feelings and will generate recommendations based on that.
+                            Moreover, it allows you to revisit sad or happy moments from your life with a calender to focus on the improvements the user has made.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="prev">
+        <i class="bi bi-arrow-left"></i>
+    </a>
+    <a class="carousel-control-next text-decoration-none w-auto pe-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="next">
+        <i class="bi bi-arrow-right"></i>
+    </a>
+</div>
+<!-- End Banner Hero -->
+
+
+<!-- Start Categories of The Month -->
+<section class="container py-5">
+    <div class="row text-center pt-3">
+        <div class="col-lg-6 m-auto">
+            <h1 class="h1">Tools</h1>
+            <p>
+                The following is the list of tools we used to develop the website.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-4 p-5 mt-3">
+            <a href="#"><img src="assets/picture/angular.svg" width="250px" height="250px" ></a>
+            <h5 class="text-center mt-3 mb-3">Angular 10</h5>
+            <p class="text-center"> Angular 10 is a TypeScript-based open-source web application
+                 framework led by the Angular Team at Google and by a community of individuals and corporations.
+                 </p>
+        </div>
+        <div class="col-12 col-md-4 p-5 mt-3">
+            <a href="#"><img src="assets/picture/mongo.svg" width="250px" height="250px"></a>
+            <h2 class="h5 text-center mt-3 mb-3">MongoDB</h2>
+            <p class="text-center">MongoDB is a source-available cross-platform document-oriented database program. 
+                It is classified as a NoSQL database program and uses JSON-like documents with optional schemas. 
+            </p>
+        </div>
+        <div class="col-12 col-md-4 p-5 mt-3">
+            <a href="#"><img src="assets/picture/bootstrap.svg" width="250px" height="250px"></a>
+            <h2 class="h5 text-center mt-3 mb-3">Bootstrap 5</h2>
+            <p class="text-center">
+                Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development,
+                 for typography, forms, buttons, navigation, and other interface components.
+            </p>
+        </div>
+    </div>
+</section>
+<!-- End Categories of The Month -->
+
+
+<!-- Start Featured Product -->
+<section class="bg-light">
+    <div class="container py-5">
+        <div class="row text-center py-3">
+            <div class="col-lg-6 m-auto">
+                <h1 class="h1">Team</h1>
+                <p>
+                   The amazing team mebers which contribited to make the following website.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-3 mb-3">
+                <div class="card h-100">
+                    <a href="shop-single.html">
+                        <img src="./assets/img/feature_prod_01.jpg" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                        
+                        <p class="card-text">
+Fahad Zaheer                        </p>
+                        <p class="text-muted">Lead Front End Developer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3 mb-3">
+                <div class="card h-100">
+                    <a href="shop-single.html">
+                        <img src="./assets/img/feature_prod_02.jpg" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                       
+                        <p class="card-text">
+Malik Zeeshan Ahmad                        </p>
+                        <p class="text-muted">Lead Full Stack Developer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3 mb-3">
+                <div class="card h-100">
+                    <a href="shop-single.html">
+                        <img src="./assets/img/feature_prod_03.jpg" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                        
+                        <p class="card-text">
+Muhammad Qasim Khan                        </p>
+                        <p class="text-muted">Lead Backend Developer</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3 mb-3">
+                <div class="card h-100">
+                    <a href="shop-single.html">
+                        <img src="./assets/img/feature_prod_03.jpg" class="card-img-top" alt="...">
+                    </a>
+                    <div class="card-body">
+                        
+                        <p class="card-text">
+Dawood  Wasif                        </p>
+                        <p class="text-muted">Lead Web Designer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End Featured Product -->
+
+
+<!-- Start Footer -->
+<footer class="bg-dark" id="tempaltemo_footer">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-4 pt-5">
+                <h2 class="h2 text-success border-bottom pb-3 border-light logo">Dophin</h2>
+                <ul class="list-unstyled text-light footer-link-list">
+                    <li>
+                        <i class="fas fa-map-marker-alt fa-fw"></i>
+                        SEECS,NUST, H12
+                    </li>
+                    <li>
+                        <i class="fa fa-phone fa-fw"></i>
+                        <a class="text-decoration-none" href="tel:010-020-0340">+923365959062</a>
+                    </li>
+                    <li>
+                        <i class="fa fa-envelope fa-fw"></i>
+                        <a class="text-decoration-none" href="mailto:info@company.com">dawoodwasif1@gmail.com</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-md-4 pt-5">
+                <h2 class="h2 text-light border-bottom pb-3 border-light">Features</h2>
+                <ul class="list-unstyled text-light footer-link-list">
+                    <li><a class="text-decoration-none" href="#">Journaling</a></li>
+                    <li><a class="text-decoration-none" href="#">Recommdations</a></li>
+                    <li><a class="text-decoration-none" href="#">Statistics</a></li>
+                    <li><a class="text-decoration-none" href="#">Save Memories</a></li>
+                    <li><a class="text-decoration-none" href="#">Dynamic Calender</a></li>
+                    <li><a class="text-decoration-none" href="#">Record Moods</a></li>
+                    <li><a class="text-decoration-none" href="#">Record Activities</a></li>
+                </ul>
+            </div>
+
+            <div class="col-md-4 pt-5">
+                <h2 class="h2 text-light border-bottom pb-3 border-light">Further Info</h2>
+                <ul class="list-unstyled text-light footer-link-list">
+                    <li><a class="text-decoration-none" href="#">Home</a></li>
+                    <li><a class="text-decoration-none" href="#">About Us</a></li>
+                    <li><a class="text-decoration-none" href="#">Other Projects</a></li>
+                    <li><a class="text-decoration-none" href="#">FAQs</a></li>
+                    <li><a class="text-decoration-none" href="#">Contact</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+        <div class="row text-light mb-4">
+            <div class="col-12 mb-3">
+                <div class="w-100 my-3 border-top border-light"></div>
+            </div>
+            <div class="col-auto me-auto">
+                <ul class="list-inline text-left footer-icons">
+                    <li class="list-inline-item border border-light rounded-circle text-center">
+                        <a class="text-light text-decoration-none" target="_blank" href="http://facebook.com/"><i class="bi bi-facebook"></i></a>
+                    </li>
+                    <li class="list-inline-item border border-light rounded-circle text-center">
+                        <a class="text-light text-decoration-none" target="_blank" href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+                    </li>
+                    <li class="list-inline-item border border-light rounded-circle text-center">
+                        <a class="text-light text-decoration-none" target="_blank" href="https://twitter.com/"><i class="bi bi-twitter"></i></a>
+                    </li>
+                    <li class="list-inline-item border border-light rounded-circle text-center">
+                        <a class="text-light text-decoration-none" target="_blank" href="https://www.linkedin.com/"><i class="bi bi-linkedin"></i></a>
+                    </li>
+                </ul>
+            </div>
+            
+        </div>
+    </div>
+
+    <div class="w-100 bg-black py-3">
+        <div class="container">
+            <div class="row pt-2">
+                <div class="col-12">
+                    <p class="text-left text-light">
+                        Copyright &copy; 2021 Dophin 
+                        | Developed by <a rel="sponsored" href="www.nust.com" target="_blank">AngulaIn20Lines</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</footer>
