--- a/frontend/src/app/home/home/home.component.css
+++ b/frontend/src/app/home/home/home.component.css
@@ -153,6 +153,11 @@
     }
   }
   
+  .tool{
+text-align: center;
+
+  }
+
   /* Extra large devices (large desktops, 1200px and up)*/
   @media (min-width: 1200px) {}
   
