--- a/frontend/src/app/home/home/home.component.html
+++ b/frontend/src/app/home/home/home.component.html
@@ -93,21 +93,21 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-md-4 p-5 mt-3">
+        <div class="tool col-12 col-md-4 p-5 mt-3">
             <a href="#"><img src="assets/picture/angular.svg" width="250px" height="250px" ></a>
             <h5 class="text-center mt-3 mb-3">Angular 10</h5>
             <p class="text-center"> Angular 10 is a TypeScript-based open-source web application
                  framework led by the Angular Team at Google and by a community of individuals and corporations.
                  </p>
         </div>
-        <div class="col-12 col-md-4 p-5 mt-3">
+        <div class="tool col-12 col-md-4 p-5 mt-3">
             <a href="#"><img src="assets/picture/mongo.svg" width="250px" height="250px"></a>
             <h2 class="h5 text-center mt-3 mb-3">MongoDB</h2>
             <p class="text-center">MongoDB is a source-available cross-platform document-oriented database program. 
                 It is classified as a NoSQL database program and uses JSON-like documents with optional schemas. 
             </p>
         </div>
-        <div class="col-12 col-md-4 p-5 mt-3">
+        <div class="tool col-12 col-md-4 p-5 mt-3">
             <a href="#"><img src="assets/picture/bootstrap.svg" width="250px" height="250px"></a>
             <h2 class="h5 text-center mt-3 mb-3">Bootstrap 5</h2>
             <p class="text-center">
@@ -197,19 +197,19 @@ Dawood  Wasif                        </p>
         <div class="row">
 
             <div class="col-md-4 pt-5">
-                <h2 class="h2 text-success border-bottom pb-3 border-light logo">Dophin</h2>
+                <h2 class="h2 text-primary border-bottom pb-3 border-light logo">Dophin</h2>
                 <ul class="list-unstyled text-light footer-link-list">
                     <li>
-                        <i class="fas fa-map-marker-alt fa-fw"></i>
-                        SEECS,NUST, H12
+                        <i class="bi bi-geo-alt"></i>
+                        &nbsp;SEECS, NUST, H12
                     </li>
                     <li>
-                        <i class="fa fa-phone fa-fw"></i>
-                        <a class="text-decoration-none" href="tel:010-020-0340">+923365959062</a>
+                        <i class="bi bi-phone"></i>
+                        <a class="text-decoration-none" href="tel:+92-336-5959062">&nbsp; +923365959062</a>
                     </li>
                     <li>
-                        <i class="fa fa-envelope fa-fw"></i>
-                        <a class="text-decoration-none" href="mailto:info@company.com">dawoodwasif1@gmail.com</a>
+                        <i class="bi bi-envelope"></i>
+                        <a class="text-decoration-none" href="mailto:dawoodwasif1@gmail.com">&nbsp; dawoodwasif1@gmail.com</a>
                     </li>
                 </ul>
             </div>
