--- a/frontend/src/app/header/header/header.component.html
+++ b/frontend/src/app/header/header/header.component.html
@@ -18,7 +18,7 @@
     
     <div class="navbar-collapse" id="navbar4">
     <ul class="navbar-nav mr-auto pl-lg-4">
-    <li class="nav-item px-lg-2 active"> <a class="nav-link" href="#"> <span class="d-inline-block d-lg-none icon-width"></span>Home</a> </li>
+    <li class="nav-item px-lg-2 active"> <a class="nav-link" href="../home"> <span class="d-inline-block d-lg-none icon-width"></span>Home</a> </li>
     <li class="nav-item px-lg-2"> <a class="nav-link" href="#"><span class="d-inline-block d-lg-none icon-width"></span>Help</a></li>
     <li class="nav-item px-lg-2"> <a class="nav-link" href="#"><span class="d-inline-block d-lg-none icon-width"></span>Contact</a> </li>
     <li class="nav-item px-lg-2"> <a class="nav-link" href="#"><span class="d-inline-block d-lg-none icon-width"></span>About Us</a> </li>
