--- a/frontend/src/app/addEntry/add-entry/add-entry.component.html
+++ b/frontend/src/app/addEntry/add-entry/add-entry.component.html
@@ -85,7 +85,7 @@
      
         
         <p> Selected mood is: <b>{{mood}}</b> </p>
-        <p> Selected activity is: <b>{{activity}}</b> </p>
+        <p> Selected activity is: <b>{{currentActivity}}</b> </p>
 
     <textarea placeholder="Write down your feelings" rows="20" name="comment[text]" id="comment_text" cols="40" class="ui-autocomplete-input" autocomplete="off" role="textbox" aria-autocomplete="list" aria-haspopup="true"></textarea>
     
