--- a/frontend/src/app/header/header/header.component.html
+++ b/frontend/src/app/header/header/header.component.html
@@ -39,7 +39,7 @@
     </a> </li>
     </ul>
     <ul class="md0">
-      <button class="btn btn-outline-secondary">Logout</button>
+      <button class="btn btn-outline-secondary" [routerLink]="['../login']">Login</button>
 
     </ul>
     </div>
