--- a/frontend/src/app/login/login/login.component.html
+++ b/frontend/src/app/login/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="card">
     <h4 class="card-header">Login</h4>
     <div class="card-body">
-        <form >
+        <form [formGroup]="myForm">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" formControlName="username" class="form-control" />
+                <input type="text" formControlName="username" class="form-control" placeholder="Username" />
                 <div class="invalid-feedback">
                     <div>Username is required</div>
                 </div>
@@ -13,11 +13,17 @@
                 <label for="password">Password</label>
                 <input type="password" formControlName="password" class="form-control" />
                 <div class="invalid-feedback">
-                    <div >Password is required</div>
+                    <div>Password is required</div>
                 </div>
             </div>
+
+            <div class="form-group" *ngIf="!Invalid">
+                <label>Invalid Credentials</label>
+            </div>
+
+
             <div class="form-group">
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" (click)="loginUser()">
                     <span class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
@@ -25,4 +31,4 @@
             </div>
         </form>
     </div>
-</div>
+</div>  
