--- a/frontend/src/app/header/header/header.component.html
+++ b/frontend/src/app/header/header/header.component.html
@@ -57,11 +57,16 @@
                   </a> </li>
               </ul>
               <ul class="md0">
-                <button class="btn btn-outline-secondary" *ngIf="!authenticated"
-                  [routerLink]="['../login']">Login</button>
-                  <button class="btn btn-outline-secondary" *ngIf="authenticated"
-                  (click)="logout()">Logout</button>
-
+                <ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
+                  <button class="btn btn-outline-secondary"
+                  (click)="auth.logout({ returnTo: document.location.origin })">
+                    Logout
+                  </button>
+                </ng-container>
+                <ng-template #loggedOut>
+                  <button class="btn btn-outline-secondary"
+                  (click)="auth.loginWithRedirect()">Log in</button>
+                </ng-template>
               </ul>
             </div>
 
