--- a/frontend/src/app/login/login/login.component.html
+++ b/frontend/src/app/login/login/login.component.html
@@ -1,19 +1,23 @@
 <div class="card">
     <h4 class="card-header">Login</h4>
     <div class="card-body">
-        <form >
+        <form>
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" formControlName="username" class="form-control" />
+                <input type="text"
+                    formControlName="username"
+                    class="form-control" />
                 <div class="invalid-feedback">
                     <div>Username is required</div>
                 </div>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" formControlName="password" class="form-control" />
+                <input type="password"
+                    formControlName="password"
+                    class="form-control" />
                 <div class="invalid-feedback">
-                    <div >Password is required</div>
+                    <div>Password is required</div>
                 </div>
             </div>
             <div class="form-group">
@@ -21,7 +25,8 @@
                     <span class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
-                <a routerLink="../register" class="btn btn-link">Register</a>
+                <a routerLink="../register"
+                    class="btn btn-link">Register</a>
             </div>
         </form>
     </div>
