--- a/frontend/src/app/login/login/login.component.html
+++ b/frontend/src/app/login/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <h4 class="card-header">Login</h4>
     <div class="card-body">
-        <form>
+        <form [formGroup]="loginForm">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text"
@@ -21,11 +21,12 @@
                 </div>
             </div>
             <div class="form-group">
-                <button class="btn btn-primary">
+                <button class="btn btn-primary"
+                    (click)='login()'>
                     <span class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
-                <a routerLink="../register"
+                <a routerLink="/register"
                     class="btn btn-link">Register</a>
             </div>
         </form>
