--- a/frontend/src/app/login/login/login.component.html
+++ b/frontend/src/app/login/login/login.component.html
@@ -3,13 +3,13 @@
     <div class="card-body">
         <form [formGroup]="myForm">
             <div class="form-group">
-                <label for="username">Username</label>
+                <label for="email">Email</label>
                 <input type="text"
                     formControlName="username"
                     class="form-control"
                     placeholder="Username" />
                 <div class="invalid-feedback">
-                    <div>Username is required</div>
+                    <div>Email is required</div>
                 </div>
             </div>
             <div class="form-group">
