remove useless files

--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -64,7 +64,7 @@
                     <div class="card-avatar">
                         <a href="javascript:void(0)">
                             <img class="img profile-image"
-                                src=".\assets\images\56232362_2306722069615875_7998182575006810112_n.jpg" />
+                                src=".\assets\images\Fahad.jpg" />
                         </a>
                     </div>
                     <div class="card-body">
