upload pp to fb

--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -57,6 +57,12 @@
                             <div class="clearfix"></div>
                         </form>
                     </div>
+                    <div>
+                      <label for="Image">Choose a new Profile Picture</label>
+                      <input type="file" (change)="upload($event)" accept="*.png.jpg.jpeg" class="btn btn-info">
+                      <button (click)="uploadImage()" class="btn btn-success pull-right">
+                        Upload Image</button>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
