--- a/frontend/src/app/register/register/register.component.html
+++ b/frontend/src/app/register/register/register.component.html
@@ -1,42 +1,52 @@
 <div class="card">
     <h4 class="card-header">Register</h4>
     <div class="card-body">
-        <form>
+        <form [formGroup]="registerForm">
             <div class="form-group">
                 <label for="firstName">First Name</label>
-                <input type="text" formControlName="firstName" class="form-control" />
+                <input type="text"
+                    formControlName="firstName"
+                    class="form-control" />
                 <div class="invalid-feedback">
-                    <div >First Name is required</div>
+                    <div>First Name is required</div>
                 </div>
             </div>
             <div class="form-group">
                 <label for="lastName">Last Name</label>
-                <input type="text" formControlName="lastName" class="form-control" />
-                <div  class="invalid-feedback">
-                    <div >Last Name is required</div>
+                <input type="text"
+                    formControlName="lastName"
+                    class="form-control" />
+                <div class="invalid-feedback">
+                    <div>Last Name is required</div>
                 </div>
             </div>
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" formControlName="username" class="form-control" />
-                <div  class="invalid-feedback">
-                    <div >Username is required</div>
+                <label for="email">email</label>
+                <input type="email"
+                    formControlName="email"
+                    class="form-control" />
+                <div class="invalid-feedback">
+                    <div>Username is required</div>
                 </div>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" formControlName="password" class="form-control" />
-                <div  class="invalid-feedback">
+                <input type="password"
+                    formControlName="password"
+                    class="form-control" />
+                <div class="invalid-feedback">
                     <div>Password is required</div>
                     <div>Password must be at least 6 characters</div>
                 </div>
             </div>
             <div class="form-group">
-                <button  class="btn btn-primary">
-                    <span  class="spinner-border spinner-border-sm mr-1"></span>
+                <button class="btn btn-primary"
+                    (click)="register()">
+                    <span class="spinner-border spinner-border-sm mr-1"></span>
                     Register
                 </button>
-                <a routerLink="../login" class="btn btn-link">Cancel</a>
+                <a routerLink="../login"
+                    class="btn btn-link">Cancel</a>
             </div>
         </form>
     </div>
