Contact Us Added

--- a/frontend/src/app/login/login/login.component.html
+++ b/frontend/src/app/login/login/login.component.html
@@ -24,7 +24,7 @@
 
             <div class="form-group">
                 <button class="btn btn-primary" (click)="loginUser()">
-                    <span class="spinner-border spinner-border-sm mr-1"></span>
+                    <span class=" mr-1"></span>
                     Login
                 </button>
                 <a routerLink="../register" class="btn btn-link">Register</a>
