--- a/frontend/src/app/home/home/home.component.html
+++ b/frontend/src/app/home/home/home.component.html
@@ -135,7 +135,7 @@
             <div class="col-12 col-md-3 mb-3">
                 <div class="card h-100">
                     <a href="shop-single.html">
-                        <img src="./assets/img/feature_prod_01.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/img/Fahad.jpg" class="card-img-top" alt="...">
                     </a>
                     <div class="card-body">
                         
@@ -148,7 +148,7 @@ Fahad Zaheer                        </p>
             <div class="col-12 col-md-3 mb-3">
                 <div class="card h-100">
                     <a href="shop-single.html">
-                        <img src="./assets/img/feature_prod_02.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/img/Zeeshan.PNG" class="card-img-top" alt="...">
                     </a>
                     <div class="card-body">
                        
@@ -161,7 +161,7 @@ Malik Zeeshan Ahmad                        </p>
             <div class="col-12 col-md-3 mb-3">
                 <div class="card h-100">
                     <a href="shop-single.html">
-                        <img src="./assets/img/feature_prod_03.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/img/Qasim.jpg" class="card-img-top" alt="...">
                     </a>
                     <div class="card-body">
                         
@@ -175,7 +175,7 @@ Muhammad Qasim Khan                        </p>
             <div class="col-12 col-md-3 mb-3">
                 <div class="card h-100">
                     <a href="shop-single.html">
-                        <img src="./assets/img/feature_prod_03.jpg" class="card-img-top" alt="...">
+                        <img src="./assets/img/Dawood.PNG" class="card-img-top" alt="...">
                     </a>
                     <div class="card-body">
                         
