--- a/frontend/src/app/register/register/register.component.html
+++ b/frontend/src/app/register/register/register.component.html
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group">
                 <button  class="btn btn-primary">
-                    <span  class="spinner-border spinner-border-sm mr-1"></span>
+                    <span  class="mr-1"></span>
                     Register
                 </button>
                 <a routerLink="../login" class="btn btn-link">Cancel</a>
