--- a/frontend/src/app/header/header/header.component.html
+++ b/frontend/src/app/header/header/header.component.html
@@ -29,13 +29,13 @@
               id="navbar4">
               <ul class="navbar-nav mr-auto pl-lg-4">
                 <li class="nav-item px-lg-2 active"> <a class="nav-link"
-                    href="../home"> <span class="d-inline-block d-lg-none icon-width"></span>Home</a> </li>
+                    routerLink="/home"> <span class="d-inline-block d-lg-none icon-width"></span>Home</a> </li>
                 <li class="nav-item px-lg-2"> <a class="nav-link"
-                    href="#"><span class="d-inline-block d-lg-none icon-width"></span>Help</a></li>
+                    routerLink="/help"><span class="d-inline-block d-lg-none icon-width"></span>Help</a></li>
                 <li class="nav-item px-lg-2"> <a class="nav-link"
-                    href="#"><span class="d-inline-block d-lg-none icon-width"></span>Contact</a> </li>
+                    routerLink="/contact"><span class="d-inline-block d-lg-none icon-width"></span>Contact</a> </li>
                 <li class="nav-item px-lg-2"> <a class="nav-link"
-                    href="#"><span class="d-inline-block d-lg-none icon-width"></span>About Us</a> </li>
+                    routerLink="/aboutus"><span class="d-inline-block d-lg-none icon-width"></span>About Us</a> </li>
 
               </ul>
               <ul class="navbar-nav ml-auto mt-3 mt-lg-0">
@@ -57,9 +57,11 @@
                   </a> </li>
               </ul>
               <ul class="md0">
-                <button class="btn btn-outline-secondary" *ngIf="!authenticated"
+                <button class="btn btn-outline-secondary"
+                  *ngIf="!authenticated"
                   [routerLink]="['../login']">Login</button>
-                  <button class="btn btn-outline-secondary" *ngIf="authenticated"
+                <button class="btn btn-outline-secondary"
+                  *ngIf="authenticated"
                   (click)="logout()">Logout</button>
 
               </ul>
