--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -71,7 +71,7 @@
                 <div class="card card-profile">
                     <div class="card-avatar">
                         <a href="javascript:void(0)">
-                            <img class="img profile-image"
+                            <img class="img profile-image" style="width:100%;"
                                 [src]="profilePic" />
                         </a>
                     </div>
