--- a/frontend/src/app/register/register/register.component.html
+++ b/frontend/src/app/register/register/register.component.html
@@ -3,21 +3,12 @@
     <div class="card-body">
         <form [formGroup]="registerForm">
             <div class="form-group">
-                <label for="firstName">First Name</label>
+                <label for="firstName">Name</label>
                 <input type="text"
-                    formControlName="firstName"
+                    formControlName="name"
                     class="form-control" />
                 <div class="invalid-feedback">
-                    <div>First Name is required</div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="lastName">Last Name</label>
-                <input type="text"
-                    formControlName="lastName"
-                    class="form-control" />
-                <div class="invalid-feedback">
-                    <div>Last Name is required</div>
+                    <div>Name is required</div>
                 </div>
             </div>
             <div class="form-group">
@@ -26,7 +17,7 @@
                     formControlName="email"
                     class="form-control" />
                 <div class="invalid-feedback">
-                    <div>Username is required</div>
+                    <div>email is required</div>
                 </div>
             </div>
             <div class="form-group">
@@ -40,8 +31,9 @@
                 </div>
             </div>
             <div class="form-group">
-                <button  class="btn btn-primary">
-                    <span  class="mr-1"></span>
+                <button class="btn btn-primary"
+                    (click)="register()">
+                    <span class="mr-1"></span>
                     Register
                 </button>
                 <a routerLink="../login"
