--- a/frontend/src/app/allEntries/all-entries/all-entries.component.html
+++ b/frontend/src/app/allEntries/all-entries/all-entries.component.html
@@ -1,11 +1,24 @@
-<div class="list-group">
-    
-    <a href="#" class="list-group-item list-group-item-action list-group-item-primary">This is a primary list group item</a>
-    <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">This is a secondary list group item</a>
-    <a href="#" class="list-group-item list-group-item-action list-group-item-success">This is a success list group item</a>
-    <a href="#" class="list-group-item list-group-item-action list-group-item-danger">This is a danger list group item</a>
-    <a href="#" class="list-group-item list-group-item-action list-group-item-warning">This is a warning list group item</a>
-    <a href="#" class="list-group-item list-group-item-action list-group-item-info">This is a info list group item</a>
-    <a href="#" class="list-group-item list-group-item-action list-group-item-light">This is a light list group item</a>
-    <a href="#" class="list-group-item list-group-item-action list-group-item-dark">This is a dark list group item</a>
-  </div>
+<div class="row">
+    <hr>
+    <div class="col-md-4" *ngFor="let item of activity; index as i;">
+  
+        <div class="profile-card-4 text-center"><img src="{{item.imageURL}}" class="img img-responsive">
+            <div class="profile-content">
+                <div class="profile-name">{{item.mood }}
+                </div>
+                <div class="profile-description">
+                    {{item.text}}
+                </div>
+                <div class="row">
+                    <h2>Activities</h2>
+
+                    <div class="col-md-4" *ngFor="let act of item.activities; index as i;">
+                        <div class="profile-overview">
+                            <p>{{ act }},</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
